# lib/api-spec/openapi.yaml
@@ -245,6 +245,7 @@ components:
         - sellProbability
         - slippageBps
         - rpcUrl
+        - strategyMode
       properties:
         tokenMint:
           type: string
@@ -268,6 +269,9 @@ components:
           type: number
         slippageBps:
           type: integer
+        strategyMode:
+          type: string
+          description: "moon | balanced | stealth"
 
     BotConfigInput:
       type: object
@@ -294,6 +298,9 @@ components:
           type: number
         slippageBps:
           type: integer
+        strategyMode:
+          type: string
+          description: "moon | balanced | stealth"
 
     LogLine:
       type: object
